# polymarket-safety-lab

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
data/forecasts/: model_benchmark_summary.csv  model_variant_comparison_100.csv  model_variant_comparison_100.json
data/forecasts/agy_smoke/: latest_benchmark_manifest.json  model_minimal.jsonl
data/forecasts/external_import_smoke/: model_minimal_rule_baseline.jsonl
data/forecasts/model_bench_100/: model_benchmark_exit_performance_summary.csv  model_benchmark_exit_summary.csv  model_benchmark_performance_summary.csv  model_benchmark_resolution_performance_summary.csv  model_benchmark_resolution_summary.csv  model_benchmark_summary.csv  model_prompt_packet_blind.md  model_prompt_packet_blind.md.manifest.json  template.jsonl
data/forecasts/model_bench_20/: model_prompt_packet.md  model_prompt_packet.md.manifest.json  model_prompt_packet_blind.md  model_prompt_packet_blind.md.manifest.json  template.jsonl
data/forecasts/next_model_blind_100/: latest_benchmark_manifest.json  model_benchmark_summary.csv  model_minimal.jsonl  model_minimal.jsonl.manifest.json
data/forecasts/next_model_blind_100_exit_edge/: latest_benchmark_manifest.json
data/mock/: snapshots.csv
data/readiness/: latest_strategy_readiness.json
docs/: CODEX_FOR_OSS_APPLICATION.md  automation_runbook.md  exit_threshold_sweep.md  forecast_provider_harness.md  forward_paper_logger.md  forward_resolution_status_20260531.md  historical_data_mvp_run.md  model_bench_100_exit_performance_summary.md  model_bench_100_exit_policy_run.md  model_bench_100_exit_summary.md  model_bench_100_performance_summary.md  model_bench_100_resolution_performance_summary.md  model_bench_100_resolution_summary.md  model_bench_100_summary.md  model_benchmark_100_run.md  model_benchmark_plan.md  model_benchmark_smoke.md  model_benchmark_summary.md  model_variant_comparison_100.md  multi_leg_portfolio_schema.md  next_model_blind_100_event_summary.md  next_model_blind_100_forced_exit_event_summary.md  next_model_blind_100_summary.md  polymarket_trading_bot_architecture.md  quickstart_walkthrough.md  release_notes_v0.1.3.md  safety_gate_spec.md  security_review_checklist.md  settled_pnl_smoke_20260531.md  strategy_readiness_gate.md  survival_harness.md  survival_standardized_comparison.md  survival_standardized_performance.md  survival_strategy_comparison.md  threat_model.md  use_cases.md
docs/examples/: portfolio_hedge_example.json
scripts/: __init__.py  optimize_exit_threshold.py
src/polymarket_backtest/: __init__.py  backtest_report.py  cli.py  collect_historical.py  collectors.py  export_dataset.py  forecast_audit.py  forecast_diagnostics.py  forecast_import.py  forecast_providers.py  forecast_runner.py  metrics.py  model_benchmark_run.py  model_benchmark_summary.py  model_output_extract.py  model_prompt_packet.py  model_variant_compare.py  models.py  paper_gate_cycle.py  paper_logger.py  paper_resolution_status.py  paper_subset.py  portfolio_schema.py  report_summary.py  resolution_replay_cycle.py  sample_dataset_validation.py  sample_validate.py  settlement_smoke.py  simulator.py  strategy.py  strategy_compare.py  strategy_readiness.py  survival.py  survival_event_summary.py
tests/: test_backtest_report.py  test_collectors.py  test_exit_threshold_sweep.py  test_forecast_audit.py  test_forecast_diagnostics.py  test_forecast_import.py  test_forecast_runner.py  test_metrics.py  test_model_benchmark_run.py  test_model_benchmark_summary.py  test_model_output_extract.py  test_model_prompt_packet.py  test_model_variant_compare.py  test_paper_gate_cycle.py  test_paper_logger.py  test_paper_resolution_status.py  test_paper_subset.py  test_portfolio_schema.py  test_report_summary.py  test_resolution_replay_cycle.py  test_sample_dataset_validation.py  test_sample_validate.py  test_settlement_smoke.py  test_simulator.py  test_strategy.py  test_strategy_compare.py  test_strategy_readiness.py  test_survival.py  test_survival_event_summary.py
(+5 files in other folders)
