[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "polymarket-safety-lab"
version = "0.1.0"
description = "Paper-only Polymarket prediction-market backtesting, forecast auditing, and live-readiness safety gates."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "kingostrich"},
]
keywords = [
    "polymarket",
    "prediction-markets",
    "backtesting",
    "paper-trading",
    "forecasting",
    "risk-management",
    "ai-safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "certifi>=2025.10.5",
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
polymarket = ["py-clob-client-v2>=1.0.1"]
anthropic = ["anthropic"]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/kingostrich/polymarket-safety-lab"
Documentation = "https://github.com/kingostrich/polymarket-safety-lab/tree/main/docs"
Repository = "https://github.com/kingostrich/polymarket-safety-lab"
Issues = "https://github.com/kingostrich/polymarket-safety-lab/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
