[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-safety-lab"
version = "0.1.3"
description = "Paper-only Polymarket prediction-market backtesting, forecast auditing, and strategy-readiness safety gates."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "kingostrich"},
]
keywords = [
    "polymarket",
    "prediction-markets",
    "backtesting",
    "paper-trading",
    "forecasting",
    "risk-management",
    "ai-safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
export = ["duckdb>=1.0"]
dev = ["build", "duckdb>=1.0", "pytest", "ruff", "twine"]

[project.scripts]
pmlab-backtest = "polymarket_backtest.cli:main"
pmlab-collect-historical = "polymarket_backtest.collect_historical:main"
pmlab-paper-logger = "polymarket_backtest.paper_logger:main"
pmlab-survival = "polymarket_backtest.survival:main"
pmlab-forecast-audit = "polymarket_backtest.forecast_audit:main"
pmlab-model-summary = "polymarket_backtest.model_benchmark_summary:main"
pmlab-paper-gate = "polymarket_backtest.paper_gate_cycle:main"

[project.urls]
Homepage = "https://github.com/kingostrich/polymarket-safety-lab"
Documentation = "https://github.com/kingostrich/polymarket-safety-lab/tree/main/docs"
Repository = "https://github.com/kingostrich/polymarket-safety-lab"
Issues = "https://github.com/kingostrich/polymarket-safety-lab/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
